# src/types/dto/user/post-fichaje-response.ts
@@ -1,7 +1,4 @@
-import { FichajeData } from "../../models/fichaje.js";
-
 /** Lo que devuelve la API al crear un fichaje correctamente. */
-export type PostFichajeResponse = Pick<
-  FichajeData,
-  "id" | "user_id" | "clock_in" | "created_at"
->;
+export type PostFichajeResponse = {
+  id: number;
+};
